<resources>
    <string name="app_name">ChatAddict</string>
    <string name="Conversation">Conversation</string>
    <string name="Contacts">Contacts</string>
    <string name="login">Login</string>
    <string name="Register">register</string>
    <string name="chataddict">ChatAddict</string>
    <string name="password">password</string>
    <string name="write_here">write here…</string>
    <string name="email">Email</string>
    <string name="don_t_have_account">Don\'t have Account:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_image">Select Image</string>
    <string name="enter_username">Enter Username</string>
    <!-- Strings used for fragments for navigation -->

    <string name="user_name">user name</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
</resources>